--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -307,6 +307,7 @@ nav {
   ul {
     list-style-type: none;
     margin: 0;
+    margin-bottom: -2px;
   }
   li {
     margin: 0;
